# bay-wheels-controller

./: .env.dist  .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: deploy-web.yml  release.yml
scripts/: setup-hooks.sh
src/: grid.rs  lib.rs  logger.rs  network.rs  provisioning.rs  stations.rs  wifi.rs  wifi_config.rs
src/spi_devices/: mod.rs  shift_register.rs
src/spi_devices/al5887/: al5887.rs  enums.rs  mod.rs  registers.rs
src/tasks/: blink.rs  fetch.rs  input_read.rs  mod.rs  serial_status.rs  signals.rs  station_leds.rs  station_parser.rs  wifi_connect.rs
tools/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/scripts/: board-mapping-to-station-map.js
tools/src/: gbfs.js  gbfs.ts  main.js  main.ts  map.js  map.ts  serial.js  serial.ts  style.css  types.ts  yaml-io.js  yaml-io.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: firmware-version.ts  flash.ts  main.ts  map-tab.ts  serial-frame.ts  status.ts  style.css  wifi.ts
