[package]
edition      = "2024"
name         = "esp32-embasssy-wifi-test"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32-embasssy-wifi-test"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.9.0"
rtt-target = "0.6.2"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "unstable",
  "wifi",
  "sniffer"
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
ieee80211 = { version = "0.5.9", default-features = false, features = ["crypto"] }
heapless = "0.8.0"
picojson = { version = "0.2", default-features = false, features = ["int32"] }
reqwless = { version = "0.13.0", default-features = false, features = ["embedded-tls", "alloc"] }
edge-nal = "0.3.0"
int-enum = "1.2.0"
embassy-sync = "0.7.2"
strum = { version = "0.27.2", default-features = false }
strum_macros = "0.27.2"
esp-storage = { version = "0.8", features = ["esp32s3"] }
esp-nvs = { version = "0.1", features = ["esp32s3"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
# Using opt-level 1 for better debugging (less aggressive than "s")
opt-level = 1
debug = true  # Enable debug symbols for better stack traces

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false


[lints.clippy]
# Treat usage of unwrap() as a warning
unwrap_used = "warn" 
# Treat usage of expect() as a warning
expect_used = "warn" 
